Wed Feb 23 10:50:43 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/EventChannelFactory.cpp:

          Remove the call to shutdown the ORB when destroying the
          TAO_Notify_EventChannelFactory.  It is not necessary and is not
          necessarily what the user wants.

        * orbsvcs/tests/Notify/XML_Persistence/main.cpp:

          Fixed a bug in the argument processing code and deactivated the
          supplier and consumer before destroying the
          TAO_Notify_EventChannelFactory.

        * orbsvcs/tests/Notify/XML_Persistence/run_test.pl:

          Switch to a single process instead of doing the test in two parts.

Wed Feb 23 01:59:20 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tao/Exception.h:

          Reverted change that made constructors protected.  MSVC++ 7.1
          cannot catch CORBA::Exception subclasses through a pointer or
          references to CORBA::Exception otherwise.

Wed Feb 23 01:03:30 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tao/PortableServer/Fixed_Array_SArgument_T.h:
        * tao/PortableServer/Fixed_Array_SArgument_T.inl:
        * tao/PortableServer/Var_Array_SArgument_T.cpp:
        * tao/PortableServer/Var_Array_SArgument_T.h:
        * tao/PortableServer/Var_Array_SArgument_T.inl:
        * tao/PortableServer/Var_Size_SArgument_T.cpp:
        * tao/PortableServer/Var_Size_SArgument_T.h:
        * tao/PortableServer/Var_Size_SArgument_T.inl:

          Fixed memory management / parameter passing issues.  Addresses
          seg faults exhibited by TAO's Param_Test regression test.

Wed Feb 23 07:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Special_Basic_SArguments.h:
        * tao/PortableServer/UB_String_SArguments.h:
        * tao/PortableServer/Basic_SArgument_T.h:
        * tao/PortableServer/Special_Basic_SArgument_T.h:
        * tao/PortableServer/UB_String_SArgument_T.h: